kleine bug fixes en opschoning van de code