@@ -1,13 +1,12 @@
 package com.github.hanyaeger.brandweerman_mark.entities.enemies;
+
 import com.github.hanyaeger.api.Coordinate2D;
-import com.github.hanyaeger.api.UpdateExposer;
 import com.github.hanyaeger.api.entities.Collided;
 import com.github.hanyaeger.api.entities.Collider;
 import com.github.hanyaeger.api.entities.impl.DynamicSpriteEntity;
 import com.github.hanyaeger.api.scenes.SceneBorder;
 import com.github.hanyaeger.brandweerman_mark.Game;
 import com.github.hanyaeger.brandweerman_mark.entities.Entity;
-import com.github.hanyaeger.brandweerman_mark.entities.player.Player;
 import com.github.hanyaeger.brandweerman_mark.entities.player.water_gun.WaterStream;
 import com.github.hanyaeger.brandweerman_mark.scenes.rooms.Room;
 
@@ -19,7 +18,7 @@ import java.util.Random;
 public abstract class Enemy extends DynamicSpriteEntity implements Entity, Collided {
 
 
-    private static Coordinate2D location;
+
     protected int hp;
     protected int damage;
     protected boolean isLevend;
@@ -30,31 +29,9 @@ public abstract class Enemy extends DynamicSpriteEntity implements Entity, Colli
         this.hp = hp;
         this.damage = damage;
         this.isLevend = true;
-        this.location = location;
+
     }
 
-
-
-    @Override
-    public void Neem_Schade(int schade) {
-        hp -= schade;
-    }
-
-    @Override
-    public int getHp() {
-        return hp;
-    }
-
-    @Override
-    public int getDamage() {
-        return damage;
-    }
-
-    public boolean getisLevend(){
-       return isLevend;
-    }
-
-    @Override
     public void notifyBoundaryTouching(SceneBorder sceneBorder) {
         setSpeed(0);
 
@@ -75,16 +52,6 @@ public abstract class Enemy extends DynamicSpriteEntity implements Entity, Colli
         }
 
     }
-
-    public void beweeg() {
-//        int timer = 1000;
-//        if (timer <= 1) {;
-//            setMotion(3, random.nextInt(359));
-//            timer = 1000;
-//        } else timer--;
-
-        setMotion(3, angleTo(Player.currentcoords));
-    }
     @Override
     public void onCollision(List<Collider> collisions) {
         int i = (Game.kamer % 5) + 1;
@@ -94,9 +61,8 @@ public abstract class Enemy extends DynamicSpriteEntity implements Entity, Colli
 
                     hp = hp - 10;
                     setMotion(10, random.nextInt(359));
-                    System.out.println("enemy collided with bullet");
-                    if (hp <= 0) {
-                        Room.enemiesList.remove(Room.enemiesList.get(0));
+                    if (hp <= 0 && !Room.enemiesList.isEmpty()) {
+                        Room.enemiesList.remove(Room.enemiesList.getFirst());
                         remove();
 
                     }
@@ -104,8 +70,8 @@ public abstract class Enemy extends DynamicSpriteEntity implements Entity, Colli
                 }
             });
         } else {
-            if(i <= 4){
-                Room.enemiesList.remove(Room.enemiesList.get(0));
+            if(i <= 4 && !Room.enemiesList.isEmpty()){
+                Room.enemiesList.remove(Room.enemiesList.getFirst());
             remove();
             }
         }
